Fixed quit button's text color. Fixed letter spacing in intojs dialogs.

--- a/css/qolak.body.css
+++ b/css/qolak.body.css
@@ -100,6 +100,11 @@ body div ul#user-dropdown li {
 }
 
 /* IntroJS Override */
-.introjs-button {
+.introjs-button, .introjs-nextbutton, .introjs-prevbutton {
+	letter-spacing: 0px !important;
+}
+
+.introjs-skipbutton {
 	color: #000 !important;
+	letter-spacing: 0px !important;
 }
